# PEST

./: .gitignore  README.md  pyproject.toml  spherinator_data_preprocessing.py
.github/workflows/: python-package.yml
devel/: convert_fits.py  show_parquet.ipynb  test_chunks.ipynb
scripts/: show_parquet.ipynb
src/pest/: __init__.py  fits_converter.py  gaia_calibrate.py  gaia_converter.py  preprocessing.py  spherinator_data_preprocessing.py
tests/: config.yaml  test_fits_converter.py  test_gaia_calibrate.py  test_gaia_converter.py  test_yaml.py
tests/data/fits/TNG100/sdss/snapnum_099/data/: broadband_6.fits
