[tool.poetry]
name = "pest"
version = "0.1.0"
description = "Preprocessing Engine for Spherinator Training"
authors = [
    "Sebastian T. Gomez <sebastian.trujillogomez@h-its.org>",
    "Bernd Doser <bernd.doser@h-its.org>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "pest", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
h5py = "^3.12.1"
illustris-python = {git = "https://github.com/illustristng/illustris_python.git"}
matplotlib = "^3.10.0"
pytest = "^8.3.4"
pyyaml = "^6.0.2"
requests = "^2.32.3"
scikit-image = "^0.25.1"
scipy = "^1.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
