[project]
name = "pest"
version = "0.1.0"
description = "Preprocessing Engine for Spherinator Training"
authors = [
  {name = "Sebastian T. Gomez", email = "sebastian.trujillogomez@h-its.org"},
  {name = "Bernd Doser", email = "bernd.doser@h-its.org"},
]
license = "Apache-2.0"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "gaiaxpy>=2.1",
    "h5py>=3.12",
    "illustris-python@git+https://github.com/illustristng/illustris_python.git",
    "matplotlib>=3.10",
    "pandas>=2.2",
    "pyarrow>=20.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "scikit-image>=0.25",
    "scipy>=1.15",
    "pytest>=8.3",
]

[project.optional-dependencies]
dev = [
    "black>=25.1",
    "flake8>=7.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
